correction erreur corpus_trie

--- a/Code/0 - Formattage donnees.ipynb
+++ b/Code/0 - Formattage donnees.ipynb
@@ -94,9 +94,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'length' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-efc7d3e49ce7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mmots_a_enlever\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvocabulary\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfdist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mmots_a_enlever_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmots_a_enlever\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mlength\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmots_a_enlever\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'length' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "import collections\n",
@@ -104,12 +116,13 @@
     "fdist = nltk.FreqDist(words)\n",
     "# On va enlever les mots qui apparaissent moins de 10 fois\n",
     "mots_a_enlever = [w for w in vocabulary if fdist[w]<10]\n",
-    "mots_a_enlever_dict = Counter(mots_a_enlever)"
+    "mots_a_enlever_dict = Counter(mots_a_enlever)\n",
+    "len(mots_a_enlever)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,30 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# On ne garde que les tweets de 2 mots ou plus\n",
-    "corpus_trie = [phrase for phrase in corpus if len(phrase.split())>=2]\n",
+    "corpus_trie = [phrase for phrase in corpus_trie if len(phrase.split())>=2]\n",
     "with open(\"data/corpus_trie.file\", \"wb\") as f:\n",
     "    pickle.dump(corpus_trie, f, pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre de mots : 31390592\n",
-      "Taille du vocabulaire : 634181\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phrases = [phrase.split() for phrase in corpus_trie]\n",
     "words = [item for sublist in phrases for item in sublist]\n",
