--- a/Redaction/Rapport_Intermediaire/rapport_inter.Rmd
+++ b/Redaction/Rapport_Intermediaire/rapport_inter.Rmd
@@ -52,36 +52,29 @@ Dans ce projet de statistiques appliquées, nous étudierons dans un premier tem
 Nous avons débuté le projet en nous imprégnant du champ des méthodes de NLP et même de Deep-learning qui nous était jusqu'alors inconnu. Pour cela nous avons lu les articles présentés dans la bibliographies ainsi que d'autres articles de blogs, en particulier concernant l'implémentation sur python de ces modèles. Nous avons consacré une grande partie de notre temps dans la compréhension du modèle.
 
 
-Le modèle *word2vec* consiste à représenter les mots d'un corpus sous forme d'un vecteurs de nombres réels. Pour cela, le principe est d'entraîner un réseau de neurones sur une tâche factive, consistant à prévoir le lien entre des mots *focus* et leur contexte, et de récupérer les poids issus de cet entraînement. Ce sont ces poids qui seront utilisés comme représentation vectorielle des mots.
+Afin de représenter les mots d’un corpus sous forme d’un vecteur, nous entraînons un réseau factiCe, consistant à prévoir le lien entre des mots *focus* et leur contexte, et de récupérer les poids issus de cet entraînement. Ce sont ces poids qui seront utilisés comme représentation vectorielle des mots. Différentes architectures sont possibles avec le modèle, nous nous intéresserons ici à l'approche \textit{Skip-gram}. Le principe est de partir d'un mot dit focus dans une phrase est de prédire, pour chaque mot du vocabulaire, la probabilité d'être dans le contexte de ce mot focus.
 
-
-Il y a deux architectures possibles pour ce modèle :
-\begin{itemize}
-\item  \textit{Continuous bags of words} où l'idée est de prédire à partir des mots du contexte le mot focus sur lequel on se trouve ;
-\item \textit{Skip-gram}, où l'idée est de partir d'un mot focus est de prédire, pour chaque mot, la probabilité d'être dans le contexte de ce mot focus.
-\end{itemize}
-C'est cette dernière approche que nous avons privilégié dans notre projet. Nous avons donc passé du temps à comprendre le fonctionnement du modèle avec cette architecture afin de l'implémenter.
 
 
 Nous pouvons résumer l'algorithme en quelques étapes :
 \begin{itemize}
-\item Nous partons d'une matrice de poids en entrée et en sortie, dont la taille sera fixée par le nombre de mots de notre vocabulaire et la dimension des vecteurs que nous désirons en sortie. 
-\item L'agorithme parcourt ensuite chaque phrase du corpus de texte, en sélectionnant aléatoirement un couple formé d'un mot focus et d'un mot contexte (le contexte étant défini avec une certaine taille de fenêtre) sur lequel seront appliqués les opérations permettant la mise à jour de la matrice des poids.
-\item L'opération est répétée un certain nombre de fois fixé au préalable.
+\item Nous partons de deux matrices de poids : une en entrée et une en sortie. La taille de ces matrices est fixée par le nombre de mots de notre vocabulaire et la dimension des vecteurs que nous désirons en sortie. 
+\item L'agorithme parcourt ensuite chaque phrase du corpus de texte. Pour chaque phrase, un mot focus est sélectionné au hasard. Pour ce mot focus, un mot est alors tiré dans le contexte, c'est-à-dire que l'on selectionne un mot dans une fenêtre autour de notre mot focus. Ce couple sera alors l'objet de notre étude : on sélectionne la ligne de la matrice de poids en entrée correspondant à notre mot en entrée puis calculons un score pour les mots du vocabulaire grâce à la matrice en sortie. Ce score mesure le fait d'être dans le conxte et est transformé en probabilité, nous avons testé deux approches, via une fonction softmax et une fonction sigmoid. La fonction de coût est alors mise à jour en regardant la probabilité du mot contexte sur lequel on travaille, puis les matrices de poids sont mises à jour par descente de gradient.
+\item L'opération est répétée un certain nombre de fois fixé au préalable, on parle de nombre d'\textit{epochs}.
 \end{itemize}
-En sortie, on a ainsi à disposition deux matrices de poids utilisée pour former nos vecteurs. Empiriquement, il est souvent fait la moyenne de ces deux matrices c'est donc ce que l'on a décidé de faire également.
+En sortie, on a ainsi à disposition deux matrices de poids utilisée pour former nos vecteurs. Nous avons décidé d'utiliser la moyenne de ces deux matrices pour créer nos vecteurs finaux.
 
 
 ## Implémentation du modèle
 
-Toute la première partie de notre travail a principalement consisté en l'implémentation du modèle, une fois que nous avons compris celui-ci. Afin de nous approprier au maximum ces nouvelles méthodes, nous avons décidé d'implémenter tous les trois individuellement le modèle sur Python en utilisant la librairie Pytorch avant de mettre en commun nos codes. De cette manière, nous avons pu chacun approfondir les points qui nous semblaient les plus flous et arriver à une mouture de modèle qui compile.
+Après la compréhension du modèle et afin de nous approprier au maximum ces nouvelles méthodes, nous avons décidé d'implémenter tous les trois individuellement le modèle sur Python en utilisant la librairie Pytorch avant de mettre en commun nos codes. De cette manière, nous avons pu chacun approfondir les points qui nous semblaient les plus flous et arriver à une mouture de modèle qui compile.
 
-L'implémentation du modèle s'est déroulée en deux étapes. En effet, nous avons commencé par implémenter une version plus simple du *word2vec* en utilisant une fonction *softmax*. Cela induit de calculer à chaque fois des informations sur tous les mots de notre corpus et donc, algorithmiquement, cette solution n'est pas viable sur les corpus trops gros, mais cela nous a permis de prendre en main à la fois les données et les étapes importantes du modèle. Nous avons réussi à aboutir à quelque chose qui donnait des résultats concluants donc nous sommes passés à une version plus élaborée du modèle et plus optimisée. L'idée est de voir qu'il n'est pas nécessaire de mettre à jour à chaque étape de l'algorithme toutes les lignes des matrices de poids mais que l'on peut seulement s'intéresser au mot contexte sur lequel on travail. Cependant, puisqu'en faisant ça on sur-estime l'effet de ce mot, l'idée est de s'intéresser à des mots qui ne sont pas dans le contexte, qu'on appelle *negative sampling* pour lesquels on va chercher à minimiser l'impact. En partant de la version simplifiée du modèle que nous avons réussi à mettre en oeuvre et une fois que nous avons compris comment il fallait prendre en compte ces *negative samplings* dans notre fonction de coût, nous avons réussi à implémenter une version quasi-définitive du modèle qui est conforme au papier de Mikolov.
+L'implémentation du modèle s'est déroulée en deux étapes. En effet, nous avons commencé par implémenter une version plus simple du *word2vec* en utilisant une fonction *softmax*. Cela induit de calculer à chaque fois des informations sur tous les mots de notre corpus et donc, algorithmiquement, cette solution n'est pas viable sur les corpus trops gros. Les résultats étaient concluants sur de petites bases donc donc nous sommes passés à une version plus élaborée du modèle et plus optimisée. En effet, il n'est pas nécessaire de mettre à jour à chaque étape de l'algorithme toutes les lignes des matrices de poids, on peut seulement s'intéresser au mot contexte sur lequel on travail. Cependant, en faisant ça on sur-estime l'effet de ce mot, il faut donc également s'intéresser à des mots qui ne sont pas dans le contexte, qu'on appelle *negative sampling* pour lesquels on va chercher à minimiser l'impact dans notre fonction de coût. En partant de la version simplifiée du modèle que nous avons implémenté et en intégrant ces *negative samplings* dans notre fonction de coût, nous avons réussi à implémenter une version quasi-définitive du modèle qui est conforme au papier de Mikolov.
 
 ## Evaluation du modèle implémenté
 
 
-Malgré leurs utilisations presque généralisées, très peu de travaux théoriques expliquent ce qui est réellement capturé par ces représentations de mots. C'est pourquoi l'évaluation de l'efficacité de ce modèle ne peut se faire qu'à l'aide de méthodes empiriques. Nous avons donc réfléchi, conjointement avec notre tuteur, aux différentes manières qui s'offraient à nous pour mesurer l'efficacité de notre modèle ainsi implémenté. Avant de s'attaquer à notre jeu de données complet, nous avons décidé d'effectuer une évaluation sur des données fictives.
+Malgré leurs utilisations presque généralisées, très peu de travaux théoriques expliquent ce qui est réellement capturé par ces représentations de mots. C'est pourquoi l'évaluation de l'efficacité de ce modèle ne peut se faire qu'à l'aide de méthodes empiriques. Nous avons donc réfléchi aux différentes manières qui s'offraient à nous pour mesurer l'efficacité de notre modèle ainsi implémenté. Avant de s'attaquer à notre jeu de données complet, nous avons effectué une évaluation sur des données fictives.
 
 L'idée est de se dire que si l'on crée un corpus fictif, basé sur dix couples, pour lesquel on maîtrise entièrement le contexte, alors, en construisant des phrases à partir de cela et de mots bruits, nous devrions avoir en sortie des résultats concluants. Nous avons donc créé un corpus à partir de ces règles : nous nous sommes fixés dix couples, pour lequels on a associé dix mots contextes différents et nous avons formé 10 000 phrases de test en tirant aléatoirement, pour chaque phrase, un mot d'un couple, cinq mots du contexte et trois mots bruits. En mélangeant les mots tirés, nous avons ainsi obtenu un corpus fictif sur lequel nous avons pu travailler.
 
@@ -92,9 +85,15 @@ Nous avons retenu principalement trois méthodes d'évaluations pour étudier le
  \item L'algorithme \textit{T-SNE}, ou \textit{t-distributed Stochastic Neighbor Embedding}, qui permis de compléter et même d'améliorer l'ACP pour les grandes dimensions. Il s'agit d'un algorithme stochastique qui permet l'apparition de clusters de points proches.
 \end{itemize}
 
+
+Nous avons donc mis en oeuvre ces trois techniques sur notre corpus fictif et les résultats ont été très concluants. Nous avons bien vu grâce à la similarité cosinus que les vecteurs de nos couples étaient très proches. L'ACP et l'algorithme t-SNE ont aussi permis de repérer les couples et les mots contextes différents.
+
 ![ACP réalisée sur le corpus de données fictives](acp_fictif.png){width=50%}
- 
-Nous avons donc mis en oeuvre ces trois techniques sur notre corpus fictif et les résultats ont été très concluants. Nous avons bien vu grâce à la similarité cosinus que les vecteurs de nos couples étaient très proches. L'ACP et l'algorithme t-SNE ont aussi permis de repérer les couples et les mots contextes différents (Figure 1).
+
+![t-SNE réalisée sur le corpus de données fictives](TSNE_fictif.png){width=50%}
+
+![Mots les plus proches de "grand" dans le corpus de données fictives](cos_fictif.png){width=50%}
+
 
 # Perspectives 
 
@@ -108,9 +107,9 @@ En plus de mettre en oeuvre les mêmes techniques que sur le corpus fictif, nous
 
 ## Analyse
  
-Tout le travail d'analyse à partir de la base de données exhaustive des tweets reste à effectuer. Une fois que nous aurons nos vecteurs qui représenteront les mots du corpus, l'idée est de pouvoir les utiliser afin d'en tirer quelque chose. Puisque notre groupe est formé de trois administrateurs de l'Insee, nous avons décidé en accord avec notre tuteur d'essayer d'orienter l'analyse vers la statistique publique. Nous avons donc contacté différentes personnes à l'Insee afin de réfléchir à des applications directes de notre travail. L'Insee a déjà publié il y a quelques temps un article qui permet de prévoir le PIB à partir d'articles du Monde grâce à des méthodes de NLP. Bien sûr, notre base de données étant différente, il ne sera pas possible de réaliser exactement la même étude. Cependant, nous avons en tête différentes pistes :
+Tout le travail d'analyse à partir de la base de données exhaustive des tweets reste à effectuer. Une fois que nous aurons nos vecteurs qui représenteront les mots du corpus, l'idée est de pouvoir les utiliser afin d'en tirer quelque chose. Puisque notre groupe est formé de trois administrateurs de l'Insee, nous voulons essayer d'orienter l'analyse vers la statistique publique. Nous avons donc contacté différentes personnes à l'Insee afin de réfléchir à des applications directes de notre travail. L'Insee a déjà publié il y a quelques temps un article qui permet de prévoir le PIB à partir d'articles du Monde grâce à des méthodes de NLP. Bien sûr, notre base de données étant différente, il ne sera pas possible de réaliser exactement la même étude. Cependant, nous avons en tête différentes pistes :
 \begin{itemize}
-\item Nous pouvons regarder si si l’analyse des tweets permet de retrouver des résultats proches de ceux réalisées par les enquêtes Insee (Camme, l’enquête de conjoncture auprès des ménages) ou de toute autre enquête de la statistique publique (comme le Baromètre d’opinion de la DREES) et d’essayer de comprendre les différences. 
+\item Nous pouvons regarder si l’analyse des tweets permet de retrouver des résultats proches de ceux réalisées par les enquêtes Insee (Camme, l’enquête de conjoncture auprès des ménages) ou de toute autre enquête de la statistique publique (comme le Baromètre d’opinion de la DREES) et d’essayer de comprendre les différences. 
 \item Nous pouvons également faire des tests autour des questions de sondages électoraux/participations électorales à l’approche des municipales.
 \item Nous pouvons enfin nous intéresser au taux de chômage et essayer de le prévoir avec les tweets.
 \end{itemize}
