--- a/Code/0 - Formatage donnees.ipynb
+++ b/Code/0 - Formatage donnees.ipynb
@@ -72,11 +72,11 @@
     "        corpus.append(mise_en_forme_phrase(column))\n",
     "print(\"formattage terminé\")\n",
     "\n",
-    "with open(\"data/sample_formate.txt\", \"w\") as output:\n",
-    "    writer = csv.writer(output, lineterminator='\\n')\n",
-    "    for phrase in corpus:\n",
-    "        writer.writerow([phrase]) \n",
-    "print(\"export csv terminé\")\n",
+    "#with open(\"data/sample_formate.txt\", \"w\") as output:\n",
+    "#    writer = csv.writer(output, lineterminator='\\n')\n",
+    "#    for phrase in corpus:\n",
+    "#        writer.writerow([phrase]) \n",
+    "#print(\"export csv terminé\")\n",
     "\n",
     "with open(\"data/corpus.file\", \"wb\") as f:\n",
     "    pickle.dump(corpus, f, pickle.HIGHEST_PROTOCOL)"
@@ -185,6 +185,184 @@
    "source": [
     "fdist[\"6h20\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [1, 2], [1, 2], [1, 2]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# à partir d'ici que des tests\n",
+    "def test(x):\n",
+    "    return([1,2])\n",
+    "list(map(test,[1,2,3,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = []\n",
+    "test.append(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import Parallel, delayed\n",
+    "import multiprocessing\n",
+    "     \n",
+    "# what are your inputs, and what operation do you want to \n",
+    "# perform on each input. For example...\n",
+    "inputs = range(10) \n",
+    "def processInput(i):\n",
+    "    return [i, i * i]\n",
+    " \n",
+    "num_cores = multiprocessing.cpu_count()\n",
+    "num_cores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "import collections\n",
+    "from collections import Counter\n",
+    "# On va enlever les mots qui apparaissent moins de 10 fois\n",
+    "mots_a_enlever = [w for w in vocabulary if fdist[w]<10]\n",
+    "mots_a_enlever_dict = Counter([\"test\",\"1\",\"2\",\"3\"])\n",
+    "len(mots_a_enlever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'test': 1, '1': 1, '2': 1, '3': 1})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mots_a_enlever_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_mot = {index: w for (index, w) in enumerate([\"test\",\"1\",\"2\",\"3\"])}\n",
+    "mot_index = {w: index for (index, w) in enumerate([\"test\",\"1\",\"2\",\"3\"])}\n",
+    "mot_index[\"test\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['test', '1', '2', '3'])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mot_index.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -203,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
